# typwriter

./: AGENTS.md  CLAUDE.md  COMPARTMENTS_GUIDE.md  LICENSE  README.md  jsrepo.json  package.json  pnpm-lock.yaml  skills-lock.json  svelte.config.js  turbo.json  vite.config.js
.claude/: launch.json  settings.local.json
.github/workflows/: android.yml  ci.yml  main.yml  nightly.yml  publish.yml
apps/typwriter-desktop/: AGENTS.md  CLAUDE.md  app-icon.json  components.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
apps/typwriter-desktop/.claude/: launch.json  settings.local.json
apps/typwriter-desktop/docs/: onboarding-design.md
apps/typwriter-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/typwriter-desktop/src-tauri/capabilities/: default.json
apps/typwriter-desktop/src-tauri/icons/: icon.icns
apps/typwriter-desktop/src-tauri/src/: lib.rs  lsp.rs
apps/typwriter-desktop/src-tauri/src/commands/: app.rs  click.rs  editor.rs  export.rs  format.rs  logs.rs  lsp.rs  mod.rs  preview.rs  settings.rs  vcs.rs  workspace.rs
apps/typwriter-desktop/src-tauri/src/compiler/: cache.rs  compile.rs  diff.rs  disk_cache.rs  mod.rs  render.rs
apps/typwriter-desktop/src-tauri/src/vcs/: commit.rs  diff.rs  fs.rs  history.rs  mod.rs  paths.rs  repo.rs  restore.rs  retention.rs  store.rs
apps/typwriter-desktop/src-tauri/src/workspace/: error.rs  mod.rs  path.rs  store.rs  watcher.rs
apps/typwriter-desktop/src-tauri/src/world/: mod.rs  progress.rs
apps/typwriter-desktop/src/lib/: async.ts  logger.ts  paths.ts  preview-url.ts  types.ts  windows.ts
apps/typwriter-desktop/src/lib/codemirror/: inline-diagnostics.ts  langs.ts
apps/typwriter-desktop/src/lib/hooks/: mobile-keyboard.ts
apps/typwriter-desktop/src/lib/ipc/: commands.ts  cross-window-state.svelte.ts  events.ts
apps/typwriter-desktop/src/lib/lsp/: client.svelte.ts  semantic-tokens.ts  transport.ts
apps/typwriter-desktop/src/lib/services/: export-service.ts  workspace-file-service.ts
apps/typwriter-desktop/src/lib/stores/: diagnostics.svelte.ts  editor-format.svelte.ts  editor-search.svelte.ts  editor.svelte.ts  log-view.svelte.ts  onboarding.svelte.ts  page.svelte.ts  platform.svelte.ts  preview.svelte.ts  settings.svelte.ts  updater.svelte.ts  vcs.svelte.ts  workspace.svelte.ts
apps/typwriter-desktop/src/lib/typst-codemirror-lang/: commands.ts  comment-decorations.ts  darkTheme.ts  decoration-utils.ts  highlight.test.ts  highlight.ts  index.ts  lightTheme.ts  markupStyles.ts  parser.js  parser.terms.js  spellcheck.ts  tokens.ts  typst.grammar  typst.ts
apps/typwriter-desktop/src/lib/utils/: platform.ts
apps/typwriter-desktop/src/routes/: +layout.svelte  +page.svelte  layout.css
apps/typwriter-mobile/: .gitignore  README.md  components.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/typwriter-mobile/src/: app.html
apps/typwriter-mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/typwriter-mobile/src-tauri/capabilities/: default.json
apps/typwriter-mobile/src-tauri/src/: compiler.rs  fonts.rs  lib.rs  main.rs  renderer.rs  workspace.rs  world.rs
apps/typwriter-mobile/src-tauri/src/commands/: compile.rs  editor.rs  export.rs  format.rs  mod.rs  workspace.rs
apps/typwriter-mobile/src/lib/: preview-url.ts  time.ts
apps/typwriter-mobile/src/lib/actions/: longpress.ts
apps/typwriter-mobile/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
apps/typwriter-web/: AGENTS.md  CLAUDE.md  README.md  components.json  package.json
apps/typwriter-web/src/: app.html
apps/typwriter-web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  layout.css
docs/code-review/: README.md  rust-findings.md  svelte-findings.md
docs/mobile/: 00-implementation-walkthrough.md  01-architecture.md  02-storage-and-saf.md  03-editor-and-performance.md  04-ui-patterns.md  05-android-build-release.md  06-ios-port.md  07-roadmap-and-testing.md  README.md
plans/: 001-ci-pr-verification-baseline.md  002-fix-world-today-utc-offset.md  003-unify-file-type-detection.md  004-gate-workspace-diagnostics.md  005-remove-mobile-from-desktop.md  README.md
plans/typwriter-mobile/: 00-overview.md  01-scaffold.md  02-rust-core.md  03-shell-and-files.md  04-editor.md  05-completions.md  06-preview.md  07-export-diagnostics-settings.md  08-saf-and-polish.md  09-block-editor.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  app_state.rs  compiler.rs  ipc.rs  lib.rs  main.rs  manager.rs  typst_compiler.rs  utils.rs  workspace.rs  world.rs
src-tauri/src/commands/: compiler.rs  editor.rs  mod.rs  workspace.rs
src-tauri/src/typst_compiler/: app_state.rs  commands.rs  compiler.rs  mod.rs
src/lib/: app-context.svelte.ts  ipc.ts  settings.ts  states.svelte.ts  types.ts  typst-language.ts  utils.ts
src/lib/commands/: index.ts
src/lib/components/: codemirror.svelte.ts  create-file.svelte  create-folder.svelte  diagnostics-panel.svelte  diagnostics.svelte  editor.svelte  file-type-combobox.svelte  filetree.svelte  left-sidebar.svelte  no-selected-file.svelte  preview-pane.svelte  preview.svelte  right-sidebar.svelte  workspace-switcher.svelte
src/lib/components/diagnostic/: empty.svelte  item.svelte
src/lib/components/editor/: bib.ts  codemirror.svelte  editor.svelte  index.ts  style.ts  typst.ts
src/lib/components/exporter/: export.ts  exporter-dialog.svelte
src/lib/components/filetree/: create-file.svelte  create-folder.svelte  file-type-combobox.svelte  pane.svelte  treeview-file.svelte  treeview-folder.svelte  workspace-switcher.svelte
src/lib/components/preview/: pane.svelte  typ-preview.svelte
src/lib/editor/: typst.ts  yml.ts
src/lib/state/: editor.ts  index.ts  preview.ts
src/lib/store/: editor.svelte.ts  index.svelte.ts  preview.svelte.ts  workspace.svelte.ts
src/lib/workspace/: document.svelte.ts  workspace.svelte.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  example.ts  updater.svelte.ts  updater.ts
(+159 files in other folders)
