[package]
name = "typwriter"
version = "0.4.10"
description = "A typst editor built with Tauri and Svelte"
authors = ["ade"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "typwriter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-svelte = "2"

# Typst core libraries
typst = "0.13.1"
typst-pdf = "0.13.1"
typst-svg = "0.13.1"
typst-render = "0.13.1"
typst-ide = "0.13.1"
comemo = "0.5"
tokio = { version = "1.18.2", features = ["rt", "time"] }
chrono = "0.4.41"
base64 = "0.22.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-devtools = "2.0.1"
typst-kit = "0.13.1"
typst-syntax = "0.13.1"
typst-timing = "0.13.1"
fs = "0.0.5"
mem = "0.5.0"
rayon = "1.11.0"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
