[package]
name = "typwriter"
version = "0.3.0"
description = "A typsetting app built on top of typst, with a desktop interface built using Tauri."
authors = ["ade"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typst = "0.14.2"
typst-ide = "0.14.2"
typst-render = "0.14.2"
typst-svg = "0.14.2"
typst-pdf = "0.14.2"
chrono = "0.4.44"
typst-kit = { version = "0.14.2", features = ["embed-fonts", "packages"] }
ecow = { version = "0.2", features = ["serde"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
notify = "7"
rayon = "1"
base64 = "0.22"
lru = "0.12"
parking_lot = "0.12"
tauri-plugin-dialog = "2"
log = "0.4.29"
png = "0.18"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
