[package]
name = "typwriter"
version = "0.8.3"
description = "A typsetting app built on top of typst, with a desktop interface built using Tauri."
authors = ["ade"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typst = "0.15"
# `Page` / `PagedDocument` moved out of the `typst` facade into `typst-layout`
# in 0.15; depend on it directly for the document/page types.
typst-layout = "0.15"
typst-ide = "0.15"
typst-render = "0.15"
typst-svg = "0.15"
typst-pdf = "0.15"
typst-html = "0.15"
chrono = "0.4.44"
typst-kit = { version = "0.15", features = ["embedded-fonts", "scan-fonts", "system-packages", "universe-packages", "system-downloader"] }
ecow = { version = "0.2", features = ["serde"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
notify = "7"
rayon = "1"
base64 = "0.22"
lru = "0.12"
parking_lot = "0.12"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
log = "0.4.29"
png = "0.18"
typstyle-core = "0.15"
tauri-plugin-updater = "2"
thiserror = "2.0.18"
# Versioning / restore-point system. Pure-Rust content-addressed store under
# .typwriter/history/ inside each workspace — no gix dependency. zstd shrinks
# blob storage; sha2 produces the content + snapshot ids.
sha2 = "0.10"
zstd = { version = "0.13", default-features = false }
